--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "fs": "^0.0.1-security",
     "plotly.js": "^1.44.4",
     "react": "^18.2.0",
+    "react-d3-cloud": "^0.6.0",
     "react-d3-speedometer": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4",
     "zingchart": "^2.9.10",
     "zingchart-react": "^3.1.4"
